<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:padding="16dp">

	<androidx.recyclerview.widget.RecyclerView
		android:id="@+id/checkout_recycleview"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingLeft="8dp" />

	<TextView
		android:id="@+id/tip_text"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="4dp"
		android:paddingLeft="8dp"
		android:text="@string/tip"
		android:textSize="14dp" />

	<TextView
		android:id="@+id/service_fee_text"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="4dp"
		android:paddingLeft="8dp"
		android:text="@string/service_fee" />

	<TextView
		android:id="@+id/sum_text"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingLeft="8dp"
		android:text="@string/sum"
		android:textSize="18dp"
		android:textStyle="bold" />

	<Button
		android:id="@+id/time"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:onClick="picktime"
		android:text="@string/time_text" />

	<Button
		android:id="@+id/finish"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/colorAccent"
		android:onClick="SendOrder"
		android:text="@string/finish" />

</LinearLayout>