<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:padding="16dp">

	<ImageButton
		android:id="@+id/minus"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="#FFFFFF"
		app:srcCompat="@drawable/ic_minus_24dp"
		tools:ignore="VectorDrawableCompat" />

	<TextView
		android:id="@+id/count"
		android:layout_width="30dp"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="@string/count_init" />

	<ImageButton
		android:id="@+id/plus"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="#FFFFFF"
		android:onClick="add"
		app:srcCompat="@drawable/ic_plus_24dp"
		tools:ignore="VectorDrawableCompat" />

	<TextView
		android:id="@+id/prouct_name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_weight="5"
		android:paddingLeft="4dp"
		android:text="@string/product_name_init" />

	<TextView
		android:id="@+id/price_text"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:gravity="right"
		android:text="@string/price_init" />
</LinearLayout>
